--- a/voobly drs merger/voobly drs merger.csproj
+++ b/voobly drs merger/voobly drs merger.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceStringReader.cs" />
     <Compile Include="rowedge.cs" />
     <Compile Include="slpReader.cs" />
     <Compile Include="slpWriter.cs" />
