--- a/voobly drs merger/voobly drs merger.csproj
+++ b/voobly drs merger/voobly drs merger.csproj
@@ -63,7 +63,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource1.resx</DependentUpon>
     </Compile>
-    <Compile Include="ResourceStringReader.cs" />
     <Compile Include="rowedge.cs" />
     <Compile Include="slpReader.cs" />
     <Compile Include="slpWriter.cs" />
@@ -96,6 +95,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\langconv.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RH.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
